# Engram

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  JOURNEY.md  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  SCOREBOARD.md  SOTA.md  analyze_shapes.py  compare_manifests.py  cum_accuracy.py  n500_v3a_validation.md  re_judge.py  re_judge_20260518T033410_441206+0000-bb7c8412-dirty-longmemeval_1779099807.json  re_judge_20260518T033410_441206+0000-bb7c8412-dirty-longmemeval_1779100334.json  recall_diag.json  recall_diagnostic.md  recall_fails.json  shape_summary.json
benchmarks/baselines/: README.md  __init__.py  _bm25.py  chroma.py  chroma_bm25.py
benchmarks/harness/: README.md
benchmarks/runs/: 20260511T134406_017065+0000-3a3f66e9-noop.json  20260511T134417_708563+0000-3a3f66e9-dirty-noop.json  20260516T172348_471297+0000-cebf6dc1-dirty-noop.json  20260516T172546_763487+0000-cebf6dc1-dirty-longmemeval.json  20260516T173018_318989+0000-cebf6dc1-dirty-longmemeval.json  20260516T174058_711840+0000-9130085d-dirty-longmemeval.json  20260516T174534_971660+0000-9130085d-dirty-longmemeval.json  20260516T174650_333682+0000-9130085d-dirty-longmemeval.json  20260516T190353_627654+0000-815b953f-dirty-longmemeval.json  20260516T194247_734439+0000-815b953f-dirty-longmemeval.json  20260516T211254_463977+0000-e503e185-dirty-longmemeval.json  20260516T211316_678981+0000-e503e185-dirty-longmemeval.json  20260516T224729_100252+0000-e503e185-dirty-longmemeval.json  20260517T094628_217875+0000-0166c0b5-dirty-longmemeval.json  20260517T101840_510449+0000-0166c0b5-dirty-longmemeval.json  20260517T101900_613843+0000-0166c0b5-dirty-longmemeval.json  20260517T101920_427928+0000-0166c0b5-dirty-longmemeval.json  20260517T101938_800264+0000-0166c0b5-dirty-longmemeval.json  20260517T101958_778548+0000-0166c0b5-dirty-longmemeval.json  20260517T102451_656666+0000-6c302ce2-dirty-longmemeval.json  20260517T102806_836803+0000-bfcc6222-dirty-longmemeval.json  20260517T103102_924794+0000-8a46ce3d-dirty-longmemeval.json  20260517T103338_427944+0000-7279d6df-dirty-longmemeval.json  20260517T103544_600362+0000-643f7216-dirty-longmemeval.json  20260517T103748_563674+0000-9dcadfc5-dirty-longmemeval.json  20260517T110344_577039+0000-7f3cdb31-dirty-longmemeval.json  20260517T153241_576115+0000-52a25bf9-dirty-longmemeval.json  20260518T010857_983087+0000-d385ed00-dirty-longmemeval.json  20260518T013232_356330+0000-e8682d19-dirty-longmemeval.json  20260518T033410_441206+0000-bb7c8412-dirty-longmemeval.json  ablation_ku.json  ablation_multi_retrieval.json  ablation_pref.json  ablation_sss_user.json  ablation_temporal.json
benchmarks/runs/eval_all_20260515_023910/: config.json  phase1_component_tests.json
benchmarks/runs/eval_all_20260515_024020/: REPORT.md  config.json  phase2_ablation_knowledge-update.json  phase2_ablation_multi-session.json  phase2_ablation_single-session-preference.json  phase2_ablation_single-session-user.json  phase2_ablation_temporal-reasoning.json  phase2_summary.json  phase3_summary.json  phase3_sweep_bm25_weight.json  phase3_sweep_mmr_lambda.json  phase3_sweep_recency_lambda.json  phase3_sweep_recent_window_k.json  phase4_summary.json
benchmarks/runs/inspect_full_20260515_093709/: inspect_knowledge-update.json  inspect_multi-session.json  inspect_single-session-assistant.json  inspect_single-session-preference.json  inspect_single-session-user.json  inspect_temporal-reasoning.json
benchmarks/runs/inspect_full_20260515_094836/: inspect_knowledge-update.json  inspect_multi-session.json  inspect_single-session-preference.json  inspect_single-session-user.json  inspect_temporal-reasoning.json
benchmarks/runs/inspect_k20_20260516_004707/: inspect_knowledge-update.json  inspect_multi-session.json  inspect_single-session-assistant.json  inspect_single-session-preference.json  inspect_single-session-user.json  (+1 more)
benchmarks/suites/: README.md  __init__.py  contradiction_temporal.py  latency_at_scale.py  locomo.py  longmemeval.py  procedural_transfer.py  recall_smoke.py
docs/: EVAL_PROTOCOL.md  RELEASING.md  RUNBOOK_LONGMEMEVAL.md  index.md
docs/api/: integrations.md  memory.md  reconcile.md  schemas.md  storage.md
docs/getting-started/: concepts.md  install.md  quickstart.md
docs/guides/: consolidation.md  contradiction-temporal.md  decay.md  integrations.md  observe-retrieve.md  procedural-memory.md
docs/operations/: multi-tenant.md  observability.md  performance.md
docs/project/: api-stability.md  deprecation-policy.md  security.md
research/: README.md
scripts/: _common.py  _stats.py  ablate_longmemeval.py  analyze_zero_recall_traces.py  batch_trace.py  fetch_longmemeval.py  inspect_retrieval.py  reproduce_benchmarks.py  retrieval_eval.py  retrieval_trace.py  run_all_evals.py  sweep.py
src/engram/: __init__.py  _gpu_lock.py  _otel.py  _preference.py  _prompt_util.py  _seed.py  _time.py  _vec_math.py  ids.py  memory.py  schemas.py
tests/: conftest.py  test_baselines_bm25.py  test_baselines_chroma.py  test_baselines_chroma_bm25.py  test_bench_chat_fallback.py  test_bench_chat_max_tokens.py  test_bench_e2e.py  test_bench_manifest.py  test_bench_retriever.py  test_compare_manifests.py  test_consolidation_abstraction.py  test_consolidation_clustering.py  test_consolidation_contradiction.py  test_consolidation_engine.py  test_consolidation_judge_prompt_injection.py  test_consolidation_perf.py  test_consolidation_promotion.py  test_consolidation_prompt_injection.py  test_contradiction_temporal_suite.py  test_decay_engine.py  test_decay_math.py  test_decay_metrics.py  test_decay_perf.py  test_decay_properties.py  test_decay_replay.py  test_decay_schemas.py  test_ids.py  test_integrations_agent.py  test_integrations_langgraph.py  test_integrations_llamaindex.py  test_integrations_verify.py  test_longmemeval_prompts.py  test_memory.py  test_memory_async.py  test_memory_consolidate_chat.py  test_memory_decay.py  test_memory_durability.py  test_memory_perf.py  test_memory_procedures.py  test_memory_temporal.py  (+59 more)
(+131 files in other folders)
