[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "engram"
version = "0.1.0.dev0"
description = "Hierarchical memory with consolidation and principled decay for LLM agents and assistants."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Ameya Borkar", email = "ameyaborkar17@gmail.com" }]
keywords = ["llm", "memory", "agents", "rag", "consolidation", "retrieval"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.40"]
postgres = ["psycopg[binary]>=3.1"]
duckdb = ["duckdb>=0.10"]
sqlite-vec = ["sqlite-vec>=0.1.0"]
consolidation = [
    # Stage 5 clustering. Pure-numpy agglomerative fallback ships in core;
    # production users install this extra to get the density-based path.
    "hdbscan>=0.8.40",
]
bench = [
    # Baselines we measure against. Heavy install; opt in.
    "chromadb>=0.5",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    # Provider adapters are formally optional extras for end users; in dev
    # we install them so mypy can typecheck the adapter modules and tests
    # can use the real SDK types under mock.
    "openai>=1.40",
    "anthropic>=0.40",
    # Consolidation backend so the HDBSCAN tests run in CI as well.
    "hdbscan>=0.8.40",
]

[project.scripts]
engram-bench = "engram.bench.__main__:main"

[project.urls]
Homepage = "https://github.com/AmeyaBorkar/Engram"
Repository = "https://github.com/AmeyaBorkar/Engram"
Issues = "https://github.com/AmeyaBorkar/Engram/issues"
Changelog = "https://github.com/AmeyaBorkar/Engram/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.hatch.build.targets.wheel.force-include]
"src/engram/consolidation/prompts" = "engram/consolidation/prompts"
"src/engram/storage/migrations" = "engram/storage/migrations"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CONTRIBUTING.md",
    "/SECURITY.md",
    "/CHANGELOG.md",
    "/ROADMAP.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "S",    # bandit / security
    "C4",   # comprehensions
    "PIE",  # misc useful rules
    "RET",  # return-statement consistency
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "ARG",  # unused arguments
    "PT",   # pytest style
    "TID",  # tidy imports
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311", "B", "SIM", "ARG"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/engram"]
pretty = true
show_error_codes = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra --strict-markers --strict-config -m 'not slow'"
markers = [
    "slow: opt-in performance tests (run with `pytest -m slow`)",
]

[tool.coverage.run]
source = ["engram"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
